--- a/COMP2084-MusicStore/appsettings.json
+++ b/COMP2084-MusicStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MusicStoreContext": "YOUR_CONNECTION_STRING_GOES_HERE"
+    "MusicStoreContext": "Data Source=den1.mssql8.gear.host;Initial Catalog=nov11database;User ID=nov11database;Password=Au5H4RZ!?Xx5"
   },
   "Logging": {
     "LogLevel": {
