--- a/COMP2084-MusicStore/COMP2084-MusicStore.csproj
+++ b/COMP2084-MusicStore/COMP2084-MusicStore.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <Folder Include="Areas\Identity\Services\" />
     <Folder Include="Data\Migrations\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
