--- a/COMP2084-MusicStore/appsettings.json
+++ b/COMP2084-MusicStore/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MusicStoreContext": "YOUR_CONNECTION_STRING_GOES_HERE"
+    "MusicStoreContext": "Data Source=localhost;Initial Catalog=nov18local;Integrated Security=True;User ID=MSI\\Sam;"
   },
   "Logging": {
     "LogLevel": {
